k8s/overlays/dev/patch-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: team05
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: frontend
          image: team05hw-frontend:latest
          imagePullPolicy: IfNotPresent
